--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,21 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.plants{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 52px;
+  justify-content: space-between;
+  margin: 0 52px;
+}
+
+.items{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  max-width: 200px;
 }
