--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,8 +5,26 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
+ul {
+  list-style-type: none;
+}
+a{
+  text-decoration: none;
+  color: black;
+}
+
+.content, .button, .input{
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
 img {
   width: 600px;
 }
@@ -16,6 +34,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -23,4 +42,24 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.left-links{
+  display: flex;
+  gap: 15px;
+  padding-left: 0;
+}
+.right-links{
+  display: flex;
+  gap: 15px;
+}
+
+.footer{
+  background-color: #eeeeee;
 }
